css removed totally and spacing fixed.

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,15 +3,3 @@
 * {
     // outline: 1px solid lightgrey;
 }
-.App {
-    // background: rgb(25, 31, 32);
-    width: 200px;
-    padding: 8px;
-    .timerHeading {
-        font-size: 24px;
-        font-weight: 500;
-    }
-	.label{
-		margin-bottom: 10px;
-	}
-}
